[package]
name = "libsignal-protocol"
version = "0.1.1-alpha.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "../README.md"
description = "An idiomatic high-level interface to the libsignal-protocol-c crate."
homepage = "https://github.com/kunerd/libsignal-protocol-rs"
repository = "https://github.com/kunerd/libsignal-protocol-rs"
keywords = ["signal", "libsignal", "whisper", "protocol"]
categories = ["api-bindings", "cryptography"]

[dependencies]
libsignal-protocol-sys = { git = "https://github.com/kunerd/libsignal-protocol-rs", branch = "enable_feature_const_if_match" }
backtrace = "0.3"
thiserror = "1.0.0"
rand = "0.8"
log = "0.4.6"
static_assertions = "1.1.0"
libc = "0.2"
base64 = "0.13"

# -- Optional Crates -- #
openssl = { version = "0.10", optional = true }
rental = { version = "0.5.3", optional = true }

sha2 = { version = "0.9.0", optional = true }
hmac = { version = "0.10.0", optional = true }
aes = { version = "0.6.0", optional = true }
block-modes = { version = "0.7.0", optional = true }
aes-ctr = { version = "0.6.0", optional = true }

[features]
default = ["crypto-native"]
crypto-native = ["sha2", "hmac", "aes", "block-modes", "aes-ctr"]
crypto-openssl = ["openssl", "rental"]

[dev-dependencies]
anyhow = "1.0"
cfg-if = "1.0.0"
env_logger = "0.8.1"
